# rsbb

./: .gitmodules  README.md
rsbb_benchmarking_messages/: CMakeLists.txt  package.xml
rsbb_benchmarking_messages/msg/: RecordRequest.msg  RefBoxState.msg
rsbb_benchmarking_messages/srv/: EndBenchmark.srv  ExecuteGoal.srv  ExecuteManualOperation.srv
rsbb_bmbox/: CMakeLists.txt  package.xml
rsbb_bmbox/config/: config.yaml
rsbb_bmbox/launch/: benchmark_scripts_server.launch
rsbb_bmbox/scripts/: benchmark_script_server  benchmark_script_server.py
rsbb_etc/: package.xml
rsbb_etc/config/: benchmarks_description.yaml  general.yaml  mocap_optitrack.yaml  rsbb_refbox.yaml
rsbb_etc/doc/: configuration_overview.md  rsbb_arch_overview.md
rsbb_etc/launch/: dev_rsbb.launch  log_mocap_optitrack.launch  mocap_optitrack.launch  rsbb.launch
rsbb_etc/objects_informations/: items_list.yaml  items_with_pose.yaml
rsbb_etc/transforms/: transform-TestingTeam.yaml  transform-asd.yaml
rsbb_record_server/: CMakeLists.txt  package.xml
rsbb_record_server/config/: config.yaml
rsbb_record_server/launch/: record_server.launch
rsbb_record_server/src/: record_node.cpp
rsbb_refbox/: package.xml  plugin.xml  roah_rsbb.perspective  roah_rsbb_new.perspective  roah_rsbb_new_2.perspective  roah_rsbb_new_dev.perspective
rsbb_refbox/config/: benchmarks.yaml  schedule.yaml
rsbb_refbox/launch/: dummy_benchmarking_module.launch  roah_rsbb.launch  roah_rsbb_client.launch  roah_rsbb_client_dev.launch  roah_rsbb_refbox_only.launch
rsbb_utils/: package.xml
(+46 files in other folders)
